fix: resolve responsive issue with "Go Home" button on mobile (contact page)

--- a/style/pages/contact-page.css
+++ b/style/pages/contact-page.css
@@ -110,6 +110,7 @@
 }
 
 .contact-form button {
+    margin-top: 10px;
     padding: 12px 20px;
     background: #272525;
     color: #fff;
@@ -139,5 +140,10 @@
 
     #contact-go-home-desktop {
         display: none;
+    }
+
+    #contact-go-home-mobile {
+        display: block;
+        margin-top: 40px;
     }
 }
